# Code-Windows

C++/11052026-1/: CMakeLists.txt
C++/Library_System/: Book.cpp  CMakeLists.txt  Librarian.cpp  Loan.cpp  Member.cpp  Person.cpp  main.cpp
C++/Library_System/Header Files/: Book.h  Date.h  Librarian.h  Library.h  Loan.h  Member.h  Person.h  UI.h
C++/School/Exercises/07052026-1/: CMakeLists.txt  main.cpp
C++/School/Exercises/08052026-1/: CMakeLists.txt  intervals.in  main.cpp
C++/School/Exercises/08052026-2/: CMakeLists.txt  main.cpp
C++/School/Exercises/11052026-1/: date.in  main.cpp
C++/School/Exercises/12052026-1/: CMakeLists.txt
C++/School/Exercises/12052026-1/src/: main.cpp
C++/School/Exercises/13052026-1/: CMakeLists.txt
C++/School/Exercises/15042026-1/: arr.in
C++/School/Exercises/17032026-1/: main.cpp
C++/School/Exercises/20032026-1/: CMakeLists.txt  main.cpp
C++/School/Exercises/20032026-2/: CMakeLists.txt  main.cpp  preorder.in
C++/School/Exercises/27042026-1/: CMakeLists.txt  main.cpp
C++/School/Exercises/28042026-1/: CMakeLists.txt  interval.in  main.cpp
C++/School/Exercises/28042026-2/: CMakeLists.txt
C++/School/Exercises/30032026-1/: CMakeLists.txt  main.cpp  preorder.in
C++/School/Exercises/31032026/: CMakeLists.txt  main.cpp
C++/School/Exercises/31032026-1/: main.cpp  tree.in
C++/TodoApp/: CMakeLists.txt
C++/TodoApp/src/: main.cpp
C++/TodoApp/src/models/: TodoItem.cpp  TodoItem.h  TodoList.cpp  TodoList.h
C++/TodoApp/src/ui/: Menu.cpp  Menu.h
School/17032026-1/: CMakeLists.txt  tree.in
(+10 files in other folders)
